Fix #29 - alignment of icons in table (#40)

--- a/packages/styles/_sass/pm-styles/_pm-table.scss
+++ b/packages/styles/_sass/pm-styles/_pm-table.scss
@@ -15,3 +15,13 @@
   @extend .uppercase;
   @extend .alignleft;
 }
+
+/* simple dirty fix */
+.pm-simple-table button svg {
+  @extend .relative;
+  top: -0.25em;
+}
+.pm-simple-table a svg {
+  @extend .relative;
+  top: -0.15em;
+}
